<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="StringFormatInvalid">
    <string name="app_name">Find</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="notifications">Notifications</string>
    <string name="email">Email address</string>
    <string name="LoginTop">Login</string>
    <string name="registertop">Register</string>
    <string name="logintext">Log in</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="we_need_your_registered_email_address_to_send_reset_password_instructions">We need your Registered Email address to send reset password instructions</string>
    <string name="email_address_forgot_password">Email address</string>
    <string name="back_to_login_on_forgot">Back</string>
    <string name="submit_forgot_password">Submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="minimum_password">please insert at least 6 digits password</string>
    <string name="home">Home</string>
    <string name="slider2_description">Lost/found or missing person and childrens.You find what you looking for by going through the posted things within the application.</string>
    <string name="terms_amp_conditions_settings"><![CDATA[Terms & Conditions]]></string>
    <string name="register_swipe">Register</string>
    <string name="register_button_text">Register</string>
    <string name="login_swipe">Log In</string>
    <string name="login_button_text">Log In</string>
    <string name="feedback_heading">FeedBack</string>
    <string name="user_privacy_policy">Privacy Policy</string>
    <string name="faqs_about_find_app">About Find App</string>
    <string name="faqs_find_app_is_the_app_which_makes_it_easier_for_people_s_to_find_their_lost_items_goods_lost_found_or_missing_person_s_and_childrens_you_find_what_you_looking_for_by_going_through_the_posted_things_within_the_application_text_the_person_who_posted_the_missing_person_or_whatsoever_and_provide_proofs_to_ensure_whatever_is_posted_it_belongs_to_you_it_is_advisable_that_you_meet_up_to_the_nearest_police_station_to_get_your_items_for_security_reasons">Find App is the app which makes it easier for people(s) to find their lost items/goods,lost/found or missing person(s) and childrens.You find what you looking for by going through the posted things within the application,text the person who posted the missing person or whatsoever and provide proofs to ensure whatever is posted it belongs to you.It is advisable that you meet up to the nearest police station to get your items for security reasons</string>
    <string name="slider1_topic">Use Find App To Make A Better World</string>
    <string name="slider1_description">Help us to find others and returning things back to their actual owners,take a step with us to make a better world.</string>
    <string name="slider3_topic">Find Lost Items,Lost and Missing People</string>
    <string name="slider3_description">You will probably find your lost items/goods provided if you provide sufficient details and you will also find lost/missing people.</string>
    <string name="profile_logout">Logout</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_faqs">FAQS</string>
    <string name="profile_invite_friends">Invite Friends</string>
    <string name="profile_location">Location</string>
    <string name="profile_email">Email</string>
    <string name="profile_cell_number">Cell Number</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_date_of_birth">Date Of Birth</string>
    <string name="profile_load">Load</string>
    <string name="profile_email_address">Email Address</string>
    <string name="profile_account_details">Account Details</string>
    <string name="profile_chat">Chat</string>
    <string name="profile_saved_posts">Saved Posts</string>
    <string name="profile_my_posts">My Posts</string>
    <string name="profile_edit_profile">Edit Profile</string>
    <string name="profile_loading">Loading</string>
    <string name="writepost_what_happened">What happened?</string>
    <string name="writepost_abuse">#Abuse</string>
    <string name="writepost_found">#Found</string>
    <string name="writepost_lost">#Lost</string>
    <string name="writepost_other">#Other</string>
    <string name="writepost_missing">#Missing</string>
    <string name="messages__11hrs_ago">11hrs ago</string>
    <string name="messages_apple_macbook">Apple MacBook</string>
    <string name="notifications__11hrs_ago">11hrs ago</string>
    <string name="notifications_apple_macbook">Apple MacBook</string>
    <string name="report_your_feedback">Your feedback</string>
    <string name="report_your_name">Your name</string>
    <string name="report_we_always_enjoy_hearing_any_feedback_queries_or_technical_problems_with_the_application">We always enjoy hearing any Feedback,queries or technical problems with the Application.</string>
    <string name="report_send_feedback">Send Feedback</string>
    <string name="settings_manage_notifications">Manage Notifications</string>
    <string name="settings_send_feedback">Send Feedback</string>
    <string name="settings_version_1_0_0_lite">Version 1.0.0-Lite</string>
    <string name="settings_version">Version</string>
    <string name="settings_change_password">Change Password</string>
    <string name="settings_find_app_is_the_app_which_makes_it_easier_for_people_s_to_find_their_lost_items_goods_lost_found_or_missing_person_s_and_childrens_you_find_what_you_looking_for_by_going_through_the_posted_things_within_the_application_text_the_person_who_posted_the_missing_person_or_whatsoever_and_provide_proofs_to_ensure_whatever_is_posted_it_belongs_to_you_it_is_advisable_that_you_meet_up_to_the_nearest_police_station_to_get_your_items_for_security_reasons">Find App is the app which makes it easier for people(s) to find their lost items/goods,lost/found or missing person(s) and childrens.You find what you looking for by going through the posted things within the application,text the person who posted the missing person or whatsoever and provide proofs to ensure whatever is posted it belongs to you.It is advisable that you meet up to the nearest police station to get your items for security reasons</string>
    <string name="settings_about_find_app">About Find App</string>
    <string name="hello_world_notification">Hello World Notification</string>
    <string name="find_app">Find App</string>
    <string name="messages_this_is_the_messege_received_by_the_user_by_other_users">Messages this is the messege received by the user by other users</string>
    <string name="_18">18</string>
    <string name="this_is_status">This is Status</string>
    <string name="_5_comments">5 comments</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="tex_getting_started">Getting Started</string>
    <string name="txt_fullnames">FullNames</string>
    <string name="txt_date_of_birth">Date of birth</string>
    <string name="txt_cell_number">Cell Number</string>
    <string name="txt_location">Location</string>
    <string name="btn_save">Save</string>
    <string name="txt_amp"><![CDATA[&]]></string>
</resources>
