<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_backgrounds"
    tools:context=".welcome_process.LoginActivity">

    <ProgressBar
        android:id="@+id/progress_bar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="6dp"
        android:indeterminateTint="@color/colorPrimary"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/gabriela"
        android:gravity="center"
        android:text="@string/find_app"
        android:textAlignment="center"
        android:textColor="@color/dummyColor"
        android:textSize="38sp"
        android:textStyle="bold" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="138dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:id="@+id/sign_in"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:background="@color/colorPrimaryDark"
                    android:fontFamily="@font/gotham"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/LoginTop"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:gravity="center_horizontal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:background="@color/colorPrimaryDark"
                    android:fontFamily="@font/gotham"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/registertop"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:gravity="center_horizontal"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout1"
                android:layout_marginTop="-6dp"
                android:background="@drawable/login_background"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/signin_signup_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:fontFamily="@font/gotham"
                    android:text="@string/logintext"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:gravity="center_horizontal"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="40dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/gotham"
                    android:hint="@string/email"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email_login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:fontFamily="@font/gotham"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingBottom="8dp"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/gotham"
                    android:hint="@string/password"
                    android:paddingTop="-4dp"
                    android:textColorHint="@color/white"
                    android:textSize="18sp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="#c2c3c8">

                    <EditText
                        android:id="@+id/et_password_login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:fontFamily="@font/gotham"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        tools:ignore="Autofill,LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txt_forgot_password_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:fontFamily="@font/calibri"
                    android:padding="0.5dp"
                    android:text="@string/forgot_your_password"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/sign_in_sign_up_btn"
                    android:layout_width="161dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="28dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_shape_white"
                    android:focusable="true"
                    android:fontFamily="@font/gotham"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>


